src/components/modals/LocationModal/LocationModal.css
@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro");

.location-modal-wrapper {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: row;
  padding: 10px;
  font-family: "Source Sans Pro", sans-serif;
  justify-content: space-between;
}

.location-section {
  display: flex;
  flex-direction: column;
  width: 50%;
  text-align: center;
  align-items: center;
}

.location-section p {
  font-weight: bold;
  letter-spacing: 2px;
  font-size: 18px;
}

@media screen and (max-width: 990px) {
  .location-section p {
    font-size: 15px;
  }
}

